--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
 
 .logo {
     float: left;
+    justify-content: space-around;
+    margin-left: 10%;
 }
 
 ul {
@@ -33,12 +35,6 @@ li {
 a {
     color: #000;
     text-decoration: none;
-}
-
-
-button {
-    background-color: purple;
-    color: #fff;
 }
 
 .wrapper {
@@ -84,6 +80,10 @@ button {
     
 }
 
+.card-1 h3{
+    margin-bottom: 0;
+}
+
 
 .sect-2 img {
     width: 536px;
@@ -108,50 +108,186 @@ button {
     padding: 60px 20px;
     display: flex;
     align-items: center;
-    justify-content:space-between;
-    /* box-shadow: 0px 36px 105px rgba(0, 0, 0, .8); */
+    justify-content: space-evenly;
     box-shadow: 0px 36px 105px 0px rgba(43, 56, 76, 0.1);
-
     opacity: 0px;
     background-color: #fff;    
     border-radius: 20px;
+}
+
+.pic{
+    position: relative; /* Enable positioning context */
+    display: inline-block;
 }
 
 .about-me .pic img{
     /* padding-top: 30%;  */
     width: 100%;
     height: 100%;
+    /* width: 424px;
+    height: 468px; */
     border-radius: 25px;
     align-items: center;
 }
 
 .about-me .pic {
-    width: 35%;
-    height: 300px;
+    /* width: 300px;
+    height: 300px; */
 
-/* float: left; */
+    width: 424px;
+    height: 468px;
 }
 
 .details{
     /* height: 100px; */
-    width: 45%;
+   
+    height: 348px;
+    width: 450px;
     align-items: center;
     /* float: right; */
-    /* padding-right: 200px; */
+    padding-top: 10%;
    
 }
 
 .details h2{
-font-family: Work Sans;
-font-size: 38px;
+/* font-family: Work Sans; */
+/* font-size: 38px; */
 font-weight: 600;
 /* line-height: 50px; */
-text-align: left;
+/* text-align: left; */
 }
 
 .works {
-    background-color: antiquewhite;
+    background-color: rgba(240, 241, 243, 1);
     width: 100%;
     height: 70vh;
 }
 
+.buttons-about{
+width: 338px;
+height:48px;
+}
+
+.btn1{
+font-weight: 600;
+color: white;
+line-height: 24px;
+background-color: rgba(165, 61, 255, 1);
+border: 1px solid transparent;
+padding: 12px 24px 12px 24px; 
+border-radius: 4px;   
+width: 132px;
+height: 48px;  
+text-decoration: none;                         
+}
+
+.btn2{
+width:  190px;
+height: 48px;
+padding: 12px 24px 12px 24px;
+border-radius: 4px;
+border: 1px solid rgba(165, 61, 255, 1);
+background-color: transparent;
+color: rgba(165, 61, 255, 1);
+text-decoration: none;
+}
+
+.social{
+    width: 200px;
+    height: 50px;
+    left: 100px;
+    background-color: #fff;
+    padding: 12px;
+    border-radius: 4px;
+    box-shadow: 0px 12px 64px 0px rgba(28, 25, 25, 0.12);
+    position: absolute; /* Position it relative to the container */
+    top: 430px;
+}
+
+.Work-process{
+    display: flex;
+    justify-content: space-around;
+    height: 636px;
+    align-items: center;
+    background-color: rgba(240, 241, 243, 1);
+    width: 100%;
+}
+
+.notes{
+    width: 32%;
+    align-items: center;
+}
+
+
+.card-4-1{
+    width: 200px;
+    height: 200px;
+    /* border: solid black; */
+    border-radius: 12px;
+    padding: 32px;
+    background-color: #fff;
+    box-shadow: 32px 32px 124px 0px rgba(43, 56, 76, 0.1);
+    ;
+}
+.icon{
+    width: 72px;
+    height: 72px;
+}
+
+.text{
+    text-align: center;
+}
+
+.portfolio{
+    align-items: center;
+    margin: auto;
+    justify-content: center;
+}
+
+.card-5{
+    /* height: 636px; */
+    align-items: center;
+    width: 80%;
+    padding-left: 10%;
+    padding-right: 10%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.card-5-1{
+    /* width: 32%;
+    height: 200px; */
+
+    width: 32%;
+    height: 450px;
+    background-color: white;
+    margin-top: 20px;
+    border-radius: 8px 0px 0px 0px;
+    border: 1px 0px 0px 0px;
+    text-align: start;
+    box-shadow: 0px 12px 64px 0px rgba(28, 25, 25, 0.12);
+
+}
+
+.card-5-1 img{
+    width: 100%;
+    height: 200px;
+}
+
+.card-5-1 .case{
+        width:  190px;
+        height: 48px;
+        padding: 12px 24px 12px 24px;
+        border-radius: 4px;
+        border: 1px solid rgba(165, 61, 255, 1);
+        background-color: transparent;
+        color: rgba(165, 61, 255, 1);
+        text-decoration: none;
+        font-weight: 600px;
+        font-size: 16px;
+}
+
+.desc{
+    padding-left: 20px;
+}
