--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ font-weight: 600;
     background-color: rgba(240, 241, 243, 1);
     width: 100%;
     height: 70vh;
+    padding-top: 150px;
 }
 
 .buttons-about{
@@ -342,4 +343,37 @@ text-decoration: none;
     width: 100%;
     height: 200px;
 }
+
+.Action{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.Experience-2{
+    display: flex;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    background-color:rgba(240, 241, 243, 1);
+    ;
+}
+
+.rectangle{
+    background-color: white;
+    width: 584px;
+    height: 72px;
+    box-shadow: 0px 32px 96px 0px rgba(28, 25, 25, 0.16);
+    padding-top: 20px;
+    padding-bottom: 40px;
+}
+
+.rectangle h3{
+    color: #000;
+}
+
+.rectangle p{
+    color: rgba(120, 120, 120, 1);
+    ;
+}
+
 
